--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "dotenv": "^16.0.3",
     "numeral": "^2.0.6",
     "vue": "^2.6.11",
     "vue-numeral-filter": "^2.0.0",
